--- a/maquette Kevin/tablo.html
+++ b/maquette Kevin/tablo.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu+Condensed" rel="stylesheet"> 
     <title>Exo Tableau</title>
-    <link rel="stylesheet" href="tablo.css">
+    <link rel="stylesheet" href="exos/tablo.css">
 </head>
 <body>
     <div id="a">1</div>
